# TalPred-AI

./: .env.example  .gitignore  Dockerfile  ENG-SPEC-Stock-Prediction-AI-v1.1.md  PRD-Stock-Prediction-AI-v1.1.md  README.md  SPRINT-PLAN-v1.md  docker-compose.yml  netlify.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.dvc/: config
alembic/: env.py
configs/: providers.yml  symbols.yml  thresholds.yml
dashboard/: app.js  index.html  styles.css
dashboard-react/: index.html  package-lock.json  package.json
docs/: ARCHIVE-RUNBOOK.md  DASHBOARD-NETLIFY.md
scripts/: _backfill_alpha_features.py  archive_to_supabase_storage.py  backfill.py  backfill_credibility.py  backfill_features.py  backfill_market_fast.py  backfill_news.py  batch_predict.py  daily_pipeline.py  export_dataset.py  generate_features.py  launch_gate.py  load_test.py  paper_trading_monitor.py  prod_diagnostics.py  research_alpha_decay.py  research_expansion_validation.py  research_factor_attribution.py  research_feature_ablation.py  research_flow_features.py  research_ic_factor_plot.py  research_liquidity_decomposition.py  research_promotion_readiness.py  research_randomized_label_check.py  research_rebalance_stride.py  research_rolling_sharpe.py  research_shadow_compare_profiles.py  research_signal_stability.py  retrain_market_relative.py  seed_symbols.py  train_and_promote.py  update_symbol_metrics.py  update_universe_sp500.py  validate_features.py  verify_sharpe.py
src/: config.py  db.py
supabase/: config.toml
tests/: test_api.py  test_calendar.py  test_reproducibility.py  (+2 more)
(+136 files in other folders)
